# Topin-Auto

./: .env.example  .gitignore  README.md  dspy.config.yaml  generate.py  generate_review_images.py  judge_images.py  main.py  openapi.json  requirements.txt  schemas.py  utils.py
agents/: pipeline.py  signatures.py
artifacts/: difficulty_agent_optimized.json  rubric_agent_optimized.json  simple_difficulty_optimized.json
cli/: mcq_generator_cli.py  sample_schema.json
cli/mcq-generator/: README.md  dspy.config.yaml  openapi.json  pyproject.toml
cli/mcq-generator/artifacts/: rubric_agent_optimized.json
cli/mcq-generator/src/mcq_generator/modules/: mcq_generator_cot.py
cli/mcq-generator/src/mcq_generator/signatures/: mcq_generator.py
cli/mcq-generator/src/mcq_generator/utils/: judges.py  models.py  orchestrator.py  validators.py
configs/: example_questions_mcq.json  template_image_mcq.json  template_mcq.json  template_t2t.json
data/: eval_dataset_standard.json  gepa_train.jsonl  gold_flawed.jsonl  gold_good.jsonl  mcq_generator_output.json  output_run.json  process_datasets.py  sample_input.json  training_dataset_standard.json
evals/: judge_promptfooconfig.yaml  judge_provider.py  promptfooconfig.yaml  provider.py
modules/: image_mcq_generator.py  mcq_generator.py  t2t_generator.py
notebooks/: difficulty_judge.ipynb  fitb_generator.ipynb  image_judge.ipynb  image_mcq_generator.ipynb  image_t2t_generator.ipynb  mcq_generator.ipynb  rubric_judge.ipynb  text_to_text_generator.ipynb  true_false_generator.ipynb
optimize/: gepa_optimize.py
(+30 files in other folders)
